--- a/test/content_for.html
+++ b/test/content_for.html
@@ -1,4 +1,5 @@
 ---
+layout: default
 ---
 Testing
 content_for
@@ -16,3 +17,6 @@ GOOOOOOOAL! → {% yield test2 | upcase %}
 
 {% content_for test4 %}Nothing!{% endcontent_for %}
 '' → '{% yield test3 if site.sidebar == true %}'
+
+{% content_for head %}HEAD{% endcontent_for %}
+{% content_for foot %}FEET{% endcontent_for %}
